hkj-spring review fixes: security, async lifecycle, Jackson, config, docs
Hardening and correctness pass over the hkj-spring Spring Boot integration,
closing the #642 checklist and the #643 review rounds: fail-closed JWT/auth
(reject malformed or non-string authorities, decoded-path prefix matching with
full metacharacter and trailing-slash normalisation), single-writer async
timeout handling and SSE stream lifecycle, and consistent bodiless-status
(204/205/304), one-shot-iterable, and error-header handling across every Path
return-value handler. Also: contextual Jackson binding for nested HKJ types,
actuator / effect-boundary / dead-config fixes, safer generated client code
(explicit binder names, snapshotted headers), and reconciled book chapters and
module docs.